manifests/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewer-api
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - reviewerapi.mrcabot.com
    secretName: reviewer-api-key
  rules:
  - host: reviewerapi.mrcabot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reviewer-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewer-ui
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - reviewer.mrcabot.com
    secretName: reviewer-ui-key
  rules:
  - host: reviewer.mrcabot.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reviewer-ui
            port:
              number: 80
